--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>jackson-core</artifactId>
       <version>2.9.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.9.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>try_with_gpt</finalName>
