--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,11 +6,11 @@
   <display-name>Archetype Created Web Application</display-name>
 
   <servlet>
-    <servlet-name>example-servlet</servlet-name>
+    <servlet-name>example</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>example-servlet</servlet-name>
+    <servlet-name>example</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 </web-app>
