--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,8 @@
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.9.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>2.9.2</version>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.7.1</version>
     </dependency>
   </dependencies>
   <build>
