--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,16 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
+  <filter>
+    <filter-name>example</filter-name>
+    <filter-class>com.example.controller.MyFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>example</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <servlet>
     <servlet-name>example</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
