--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,19 @@
 
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>6.0.9</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.6.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-websocket</artifactId>
       <version>6.0.9</version>
     </dependency>
