add open topics to readme and change liquibase url

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
 changeLogFile=dbchangelog.xml
-url=jdbc:postgresql://localhost:5432/testing_db
+url=jdbc:postgresql://aws-testing-db.c4ggxdbvbrr0.us-east-1.rds.amazonaws.com:5432/testing_db
 username=postgres
 password=postgres
